--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -8,37 +8,61 @@
     <ImageView
         android:id="@+id/imageView2"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="300dp"
         android:layout_alignParentEnd="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentRight="true"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
         android:layout_margin="@dimen/login_elements_margin"
-        app:srcCompat="@mipmap/ic_launcher" />
+        android:src="@drawable/logo"
+        app:srcCompat="@mipmap/ic_launcher"/>
 
     <android.support.design.widget.TextInputLayout
-        android:id="@+id/textInputLayout"
-        android:layout_width="match_parent"
+        android:id="@+id/phoneInputLayout"
+        android:layout_width="180dp"
         android:layout_height="wrap_content"
         android:layout_below="@+id/imageView2"
         android:layout_centerInParent="true"
         android:layout_centerVertical="false"
-        android:layout_margin="@dimen/login_elements_margin">
+        android:layout_margin="@dimen/login_elements_margin"
+        >
 
         <EditText
             android:id="@+id/phoneField"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="hint" />
+            android:hint="@string/login_phone_hint"/>
+    </android.support.design.widget.TextInputLayout>
+
+    <android.support.design.widget.TextInputLayout
+        android:id="@+id/codeInputLayout"
+        android:layout_width="220dp"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/imageView2"
+        android:layout_centerInParent="true"
+        android:layout_centerVertical="false"
+        android:layout_margin="@dimen/login_elements_margin"
+        android:visibility="invisible">
+
+        <EditText
+            android:id="@+id/codeField"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:hint="@string/login_code_hint"/>
     </android.support.design.widget.TextInputLayout>
 
     <Button
-        android:id="@+id/button"
+        android:id="@+id/login_enter"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/textInputLayout"
-        android:layout_centerHorizontal="true"
-        android:layout_margin="@dimen/login_elements_margin"
-        android:text="Button" />
+        android:layout_alignEnd="@+id/phoneInputLayout"
+        android:layout_alignLeft="@+id/phoneInputLayout"
+        android:layout_alignRight="@+id/phoneInputLayout"
+        android:layout_alignStart="@+id/phoneInputLayout"
+        android:layout_below="@+id/phoneInputLayout"
+        android:layout_marginBottom="@dimen/login_elements_margin"
+        android:layout_marginTop="@dimen/login_elements_margin"
+        android:text="@string/login_enter"/>
+
 </RelativeLayout>
