--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,8 @@
     <color name="colorPrimary">#3F51B5</color>
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
+    <color name="LoginBackground">#3a3a3a</color>
+    <color name="enterButtonBackground">#939393</color>
+    <color name="login_edittext_color">#d8d8d8</color>
+    <color name="login_hint_color">#979797</color>
 </resources>
