--- a/app/src/main/res/layout/fragment_order.xml
+++ b/app/src/main/res/layout/fragment_order.xml
@@ -56,15 +56,15 @@
             android:layout_columnWeight="1">
 
             <TextView
-                android:id="@+id/textView3"
+                android:id="@+id/timeTextView"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_above="@+id/imageButton"
+                android:layout_above="@+id/timeSetImageButton"
                 android:layout_centerHorizontal="true"
                 android:text="@string/add_time"/>
 
             <ImageButton
-                android:id="@+id/imageButton"
+                android:id="@+id/timeSetImageButton"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_centerInParent="true"
@@ -74,7 +74,7 @@
                 android:id="@+id/timeTextView"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_below="@+id/imageButton"
+                android:layout_below="@+id/timeSetImageButton"
                 android:layout_centerHorizontal="true"/>
         </RelativeLayout>
 
