--- a/app/src/main/res/layout/item_fragment_order_recyclerview.xml
+++ b/app/src/main/res/layout/item_fragment_order_recyclerview.xml
@@ -1,27 +1,36 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-                xmlns:app="http://schemas.android.com/apk/res-auto"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content">
+<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+                                    xmlns:app="http://schemas.android.com/apk/res-auto"
+                                    android:layout_width="match_parent"
+                                    android:layout_height="wrap_content"
+                                    android:layout_margin="@dimen/item_margin">
 
-    <TextView
-        android:id="@+id/adresTextView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignBottom="@+id/deleteButton"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
-        android:layout_toStartOf="@+id/deleteButton"
-        android:layout_weight="1"
-        android:text="TextView"/>
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
 
-    <ImageButton
-        android:id="@+id/deleteButton"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentTop="true"
-        android:layout_weight="0.83"
-        app:srcCompat="@android:drawable/ic_delete"/>
+        <ImageButton
+            android:id="@+id/deleteButton"
+            style="@style/Base.Widget.AppCompat.Button.Borderless"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentEnd="true"
+            android:layout_alignParentTop="true"
+            android:layout_weight="0.83"
+            app:srcCompat="@android:drawable/ic_delete"/>
 
-</RelativeLayout>
+        <TextView
+            android:id="@+id/adresTextView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignBottom="@+id/deleteButton"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentTop="true"
+            android:layout_toStartOf="@+id/deleteButton"
+            android:layout_weight="1"
+            android:gravity="center_vertical"
+            android:padding="@dimen/adres_list_text_padding"
+            android:text="TextView"/>
+    </RelativeLayout>
+
+</android.support.v7.widget.CardView>
