--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -7,4 +7,6 @@
     <dimen name="fab_margin">16dp</dimen>
     <dimen name="login_elements_margin">20dp</dimen>
     <dimen name="button_text_padding">10dp</dimen>
+    <dimen name="item_margin">10dp</dimen>
+    <dimen name="adres_list_text_padding">5dp</dimen>
 </resources>
