--- a/app/src/main/res/layout/item_fragment_order_recyclerview.xml
+++ b/app/src/main/res/layout/item_fragment_order_recyclerview.xml
@@ -1,36 +1,78 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
-                                    xmlns:app="http://schemas.android.com/apk/res-auto"
-                                    android:layout_width="match_parent"
-                                    android:layout_height="wrap_content"
-                                    android:layout_margin="@dimen/item_margin">
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+                xmlns:app="http://schemas.android.com/apk/res-auto"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
 
     <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:id="@+id/point_container "
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignBottom="@+id/main_container"
+        android:layout_alignParentTop="true"
+        android:paddingLeft="@dimen/item_adres_point_padding"
+        android:paddingRight="@dimen/item_adres_point_padding">
 
-        <ImageButton
-            android:id="@+id/deleteButton"
-            style="@style/Base.Widget.AppCompat.Button.Borderless"
+        <ImageView
+            android:id="@+id/top_line"
+            android:layout_width="1dp"
+            android:layout_height="50dp"
+            android:layout_above="@+id/point"
+            android:layout_alignParentTop="true"
+            android:layout_centerHorizontal="true"
+            app:srcCompat="@color/colorAccent"/>
+
+        <ImageView
+            android:id="@+id/point"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignParentEnd="true"
-            android:layout_alignParentTop="true"
-            android:layout_weight="0.83"
-            app:srcCompat="@android:drawable/ic_delete"/>
+            android:layout_centerHorizontal="true"
+            android:layout_centerVertical="true"
+            app:srcCompat="@drawable/circle"/>
 
-        <TextView
-            android:id="@+id/adresTextView"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignBottom="@+id/deleteButton"
-            android:layout_alignParentStart="true"
-            android:layout_alignParentTop="true"
-            android:layout_toStartOf="@+id/deleteButton"
-            android:layout_weight="1"
-            android:gravity="center_vertical"
-            android:padding="@dimen/adres_list_text_padding"
-            android:text="TextView"/>
+        <ImageView
+            android:id="@+id/bottom_line"
+            android:layout_width="1dp"
+            android:layout_height="50dp"
+            android:layout_alignParentBottom="true"
+            android:layout_below="@+id/point"
+            android:layout_centerHorizontal="true"
+            app:srcCompat="@color/colorAccent"/>
     </RelativeLayout>
 
-</android.support.v7.widget.CardView>
+    <FrameLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_toEndOf="@+id/point_container "
+        android:id="@+id/main_container">
+
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+            <ImageButton
+                android:id="@+id/deleteButton"
+                style="@style/Base.Widget.AppCompat.Button.Borderless"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentEnd="true"
+                android:layout_alignParentTop="true"
+                android:layout_weight="0.83"
+                app:srcCompat="@android:drawable/ic_delete"/>
+
+            <TextView
+                android:id="@+id/adresTextView"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignBottom="@+id/deleteButton"
+                android:layout_alignParentStart="true"
+                android:layout_alignParentTop="true"
+                android:layout_toStartOf="@+id/deleteButton"
+                android:layout_weight="1"
+                android:gravity="center_vertical"
+                android:padding="@dimen/adres_list_text_padding"
+                android:text="TextView"/>
+        </RelativeLayout>
+    </FrameLayout>
+
+</RelativeLayout>
