--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -9,4 +9,5 @@
     <dimen name="button_text_padding">10dp</dimen>
     <dimen name="item_margin">10dp</dimen>
     <dimen name="adres_list_text_padding">5dp</dimen>
+    <dimen name="item_adres_point_padding">20dp</dimen>
 </resources>
