--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -10,4 +10,5 @@
     <dimen name="item_margin">10dp</dimen>
     <dimen name="adres_list_text_padding">5dp</dimen>
     <dimen name="item_adres_point_padding">20dp</dimen>
+    <dimen name="download_dialog_text_margin">10dp</dimen>
 </resources>
