--- a/app/src/main/res/layout/fragment_order.xml
+++ b/app/src/main/res/layout/fragment_order.xml
@@ -71,7 +71,7 @@
                 app:srcCompat="@mipmap/ic_launcher"/>
 
             <TextView
-                android:id="@+id/timeTextView"
+                android:id="@+id/selectedTimeTextView"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_below="@+id/timeSetImageButton"
