--- a/app/src/main/res/layout/fragment_summary.xml
+++ b/app/src/main/res/layout/fragment_summary.xml
@@ -59,17 +59,24 @@
     <WebView
         android:id="@+id/webView"
         android:layout_width="match_parent"
-        android:layout_height="300dp"
-        android:layout_above="@+id/ok_button"/>
+        android:layout_height="320dp"
+        android:layout_alignParentBottom="true"/>
 
-    <Button
-        android:id="@+id/ok_button"
+    <FrameLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:layout_alignParentEnd="true"
         android:layout_alignParentStart="true"
         android:layout_weight="1"
-        android:text="@string/ok_button"/>
+        android:background="@android:color/background_light">
+
+        <Button
+            android:id="@+id/ok_button"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+
+            android:text="@string/ok_button"/>
+    </FrameLayout>
 
 </RelativeLayout>
