Изменен цвет элементов в actionbar

--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -6,6 +6,7 @@
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
+        <item name="drawerArrowStyle">@style/DrawerArrowStyle</item>
     </style>
 
     <style name="AppTheme.NoActionBar">
@@ -27,6 +28,12 @@
         <item name="colorControlNormal">#aaaaaa</item>
         <item name="colorControlActivated">#aaaaaa</item>
         <item name="colorControlHighlight">#aaaaaa</item>
+    </style>
+
+    <!-- Стиль hamburger-кнопки -->
+    <style name="DrawerArrowStyle" parent="@style/Widget.AppCompat.DrawerArrowToggle">
+        <item name="spinBars">true</item>
+        <item name="color">@android:color/black</item>
     </style>
 
 </resources>
