--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#3F51B5</color>
-    <color name="colorPrimaryDark">#303F9F</color>
-    <color name="colorAccent">#FF4081</color>
+    <color name="colorPrimary">#FBCA01</color>
+    <color name="colorPrimaryDark">#C69F01</color>
+    <color name="colorAccent">#000000</color>
     <color name="LoginBackground">#3a3a3a</color>
     <color name="enterButtonBackground">#939393</color>
     <color name="login_edittext_color">#d8d8d8</color>
