--- a/app/src/main/res/layout/fragment_order.xml
+++ b/app/src/main/res/layout/fragment_order.xml
@@ -6,24 +6,25 @@
     <Button
         android:id="@+id/next_button"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="70dp"
         android:layout_alignParentBottom="true"
         android:layout_alignParentEnd="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentRight="true"
         android:layout_alignParentStart="true"
-        android:text="@string/order_ready"/>
+        android:text="@string/order_ready"
+        android:textSize="@dimen/text_view_text_size"/>
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/adresRecyclerView"
         android:layout_width="match_parent"
-        android:layout_height="300dp">
+        android:layout_height="wrap_content">
 
     </android.support.v7.widget.RecyclerView>
 
     <android.support.v7.widget.GridLayout
         android:layout_width="match_parent"
-        android:layout_height="200dp"
+        android:layout_height="wrap_content"
         android:layout_above="@+id/next_button"
         android:layout_below="@+id/adresRecyclerView"
         app:columnCount="2"
@@ -39,7 +40,8 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_centerInParent="true"
-                app:srcCompat="@mipmap/ic_launcher"/>
+                android:background="@null"
+                app:srcCompat="@drawable/ic_plus_100dp"/>
 
             <TextView
                 android:id="@+id/textView2"
@@ -47,7 +49,8 @@
                 android:layout_height="wrap_content"
                 android:layout_above="@+id/addAdresImageButton"
                 android:layout_centerHorizontal="true"
-                android:text="@string/add_adres"/>
+                android:text="@string/add_adres"
+                android:textSize="@dimen/text_view_text_size"/>
         </RelativeLayout>
 
         <RelativeLayout
@@ -61,14 +64,16 @@
                 android:layout_height="wrap_content"
                 android:layout_above="@+id/timeSetImageButton"
                 android:layout_centerHorizontal="true"
-                android:text="@string/add_time"/>
+                android:text="@string/add_time"
+                android:textSize="@dimen/text_view_text_size"/>
 
             <ImageButton
                 android:id="@+id/timeSetImageButton"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_centerInParent="true"
-                app:srcCompat="@mipmap/ic_launcher"/>
+                android:background="@null"
+                app:srcCompat="@drawable/ic_time_100dp"/>
 
             <TextView
                 android:id="@+id/selectedTimeTextView"
@@ -76,7 +81,8 @@
                 android:layout_height="wrap_content"
                 android:layout_below="@+id/timeSetImageButton"
                 android:layout_centerHorizontal="true"
-                android:text="@string/time_now"/>
+                android:text="@string/time_now"
+                android:textSize="@dimen/text_view_text_size"/>
         </RelativeLayout>
 
     </android.support.v7.widget.GridLayout>
