--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -24,6 +24,12 @@
         <item name="android:textColor">@color/login_hint_color</item>
     </style>
 
+    <!-- Стиль для элементов NavDraw'а -->
+    <style name="NavigationDrawerStyle">
+        <item name="android:textSize">20sp</item><!-- text size in menu-->
+        <item name="android:listPreferredItemHeightSmall">80dp</item><!-- item size in menu-->
+    </style>
+
     <style name="EditTextUnderline" parent="Theme.AppCompat.Light.DarkActionBar">
         <item name="colorControlNormal">#aaaaaa</item>
         <item name="colorControlActivated">#aaaaaa</item>
@@ -34,6 +40,13 @@
     <style name="DrawerArrowStyle" parent="@style/Widget.AppCompat.DrawerArrowToggle">
         <item name="spinBars">true</item>
         <item name="color">@android:color/black</item>
+    </style>
+
+    <style name="Toolbar.TitleText" parent="TextAppearance.Widget.AppCompat.Toolbar.Title">
+        <item name="android:textSize">30sp</item>
+    </style>
+    <style name="Toolbar.SubtitleText" parent="TextAppearance.Widget.AppCompat.Toolbar.Subtitle">
+        <item name="android:textSize">17sp</item>
     </style>
 
 </resources>
