--- a/app/src/main/res/layout/app_bar_main.xml
+++ b/app/src/main/res/layout/app_bar_main.xml
@@ -16,12 +16,14 @@
         <android.support.v7.widget.Toolbar
             android:id="@+id/toolbar"
             android:layout_width="match_parent"
-            android:layout_height="?attr/actionBarSize"
+            android:layout_height="100dp"
             android:background="?attr/colorPrimary"
+            android:minHeight="100dp"
             app:popupTheme="@style/AppTheme.PopupOverlay"
-            app:titleTextColor="@android:color/black"
+            app:subtitleTextAppearance="@style/Toolbar.SubtitleText"
             app:subtitleTextColor="@android:color/black"
-            />
+            app:titleTextAppearance="@style/Toolbar.TitleText"
+            app:titleTextColor="@android:color/black"/>
 
     </android.support.design.widget.AppBarLayout>
 
