--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -27,13 +27,14 @@
         <Button
             android:id="@+id/button"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_height="70dp"
             android:layout_alignParentEnd="true"
             android:layout_alignParentLeft="true"
             android:layout_alignParentRight="true"
             android:layout_alignParentStart="true"
             android:layout_below="@+id/textView"
-            android:text="@string/start_adres_added"/>
+            android:text="@string/start_adres_added"
+            android:textSize="@dimen/text_view_text_size"/>
 
         <TextView
             android:id="@+id/textView"
@@ -46,7 +47,9 @@
             android:layout_alignParentTop="true"
             android:ems="10"
             android:inputType="textPersonName"
-            android:text="Name"/>
+            android:textColor="@android:color/black"
+            android:textSize="@dimen/text_view_text_size"
+            tools:text="ADDRESS"/>
     </RelativeLayout>
 
 </RelativeLayout>
