--- a/app/src/main/res/layout/item_fragment_history_recyclerview.xml
+++ b/app/src/main/res/layout/item_fragment_history_recyclerview.xml
@@ -17,6 +17,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="end"
-        android:text="5465465"/>
+        android:text="Заказать еще раз"
+        android:textSize="@dimen/text_view_text_size"/>
 
 </LinearLayout>
