--- a/app/src/main/res/layout/item_fragment_order_recyclerview.xml
+++ b/app/src/main/res/layout/item_fragment_order_recyclerview.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                 xmlns:app="http://schemas.android.com/apk/res-auto"
+                xmlns:tools="http://schemas.android.com/tools"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
 
@@ -16,7 +17,7 @@
         <ImageView
             android:id="@+id/top_line"
             android:layout_width="1dp"
-            android:layout_height="50dp"
+            android:layout_height="match_parent"
             android:layout_above="@+id/point"
             android:layout_alignParentTop="true"
             android:layout_centerHorizontal="true"
@@ -33,7 +34,7 @@
         <ImageView
             android:id="@+id/bottom_line"
             android:layout_width="1dp"
-            android:layout_height="50dp"
+            android:layout_height="match_parent"
             android:layout_alignParentBottom="true"
             android:layout_below="@+id/point"
             android:layout_centerHorizontal="true"
@@ -56,7 +57,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignParentEnd="true"
-                android:layout_alignParentTop="true"
+                android:layout_centerVertical="true"
                 android:layout_weight="0.83"
                 app:srcCompat="@android:drawable/ic_delete"/>
 
@@ -64,14 +65,14 @@
                 android:id="@+id/adresTextView"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_alignBottom="@+id/deleteButton"
                 android:layout_alignParentStart="true"
                 android:layout_alignParentTop="true"
                 android:layout_margin="@dimen/item_margin"
                 android:layout_toStartOf="@+id/deleteButton"
                 android:layout_weight="1"
                 android:gravity="center_vertical"
-                android:text="TextView"/>
+                android:textSize="@dimen/text_view_text_size"
+                tools:text="ADDRESS"/>
         </RelativeLayout>
     </FrameLayout>
 
