--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -11,4 +11,5 @@
     <dimen name="adres_list_text_padding">5dp</dimen>
     <dimen name="item_adres_point_padding">20dp</dimen>
     <dimen name="download_dialog_text_margin">10dp</dimen>
+    <dimen name="text_view_text_size">20sp</dimen>
 </resources>
