--- a/app/src/main/res/layout/fragment_order.xml
+++ b/app/src/main/res/layout/fragment_order.xml
@@ -3,6 +3,13 @@
                 xmlns:app="http://schemas.android.com/apk/res-auto"
                 android:layout_width="match_parent" android:layout_height="match_parent">
 
+    <!-- Невидимый вычислитель цены поездки. Он ДОЛЖЕН быть невидимым-->
+    <WebView
+        android:id="@+id/web_view"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:visibility="invisible"/>
+
     <Button
         android:id="@+id/next_button"
         android:layout_width="wrap_content"
