--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -10,10 +10,10 @@
         android:id="@+id/webView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_alignParentBottom="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
-        android:layout_below="@+id/appBarLayout"/>
+        android:layout_below="@+id/appBarLayout"
+        android:layout_above="@+id/relativeLayout"/>
 
     <RelativeLayout
         android:id="@+id/relativeLayout"
