--- a/app/src/main/res/layout/fragment_order.xml
+++ b/app/src/main/res/layout/fragment_order.xml
@@ -10,6 +10,13 @@
         android:layout_height="0dp"
         android:visibility="invisible"/>
 
+    <ImageView
+        android:id="@+id/imageView2"
+        android:layout_width="match_parent"
+        android:layout_height="55dp"
+        android:scaleType="centerCrop"
+        app:srcCompat="@drawable/banner_prilozhenia"/>
+
     <Button
         android:id="@+id/next_button"
         android:layout_width="wrap_content"
@@ -25,7 +32,8 @@
     <android.support.v7.widget.RecyclerView
         android:id="@+id/adresRecyclerView"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/imageView2">
 
     </android.support.v7.widget.RecyclerView>
 
