--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -33,6 +33,7 @@
             android:layout_alignParentRight="true"
             android:layout_alignParentStart="true"
             android:layout_below="@+id/textView"
+            android:backgroundTint="@color/colorPrimary"
             android:text="@string/start_adres_added"
             android:textSize="@dimen/text_view_text_size"/>
 
