--- a/app/src/main/res/layout/fragment_summary.xml
+++ b/app/src/main/res/layout/fragment_summary.xml
@@ -84,6 +84,7 @@
             android:layout_width="match_parent"
             android:layout_height="70dp"
 
+            android:backgroundTint="@color/colorPrimary"
             android:text="@string/ok_button"
             android:textSize="@dimen/text_view_text_size"/>
     </FrameLayout>
