--- a/app/src/main/res/layout/item_fragment_order_recyclerview.xml
+++ b/app/src/main/res/layout/item_fragment_order_recyclerview.xml
@@ -6,7 +6,7 @@
                 android:layout_height="wrap_content">
 
     <RelativeLayout
-        android:id="@+id/point_container "
+        android:id="@+id/point_container"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignBottom="@+id/main_container"
@@ -24,6 +24,24 @@
             app:srcCompat="@color/colorAccent"/>
 
         <ImageView
+            android:id="@+id/top_line_arrow"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignBottom="@+id/arrow_point"
+            android:layout_alignParentStart="true"
+            android:baselineAlignBottom="false"
+            app:srcCompat="@drawable/ic_arrow_down_24dp"/>
+
+        <!-- Этот элемент нужен для того, чтобы грамотно централизовать top_line_arrow -->
+        <Space
+            android:id="@+id/arrow_point"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:layout_centerHorizontal="true"
+            android:layout_centerInParent="true"
+            android:keepScreenOn="false"/>
+
+        <ImageView
             android:id="@+id/point"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -39,13 +57,14 @@
             android:layout_below="@+id/point"
             android:layout_centerHorizontal="true"
             app:srcCompat="@color/colorAccent"/>
+
     </RelativeLayout>
 
     <FrameLayout
+        android:id="@+id/main_container"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_toEndOf="@+id/point_container "
-        android:id="@+id/main_container">
+        android:layout_toEndOf="@id/point_container">
 
         <RelativeLayout
             android:layout_width="match_parent"
@@ -59,21 +78,24 @@
                 android:layout_alignParentEnd="true"
                 android:layout_centerVertical="true"
                 android:layout_weight="0.83"
-                app:srcCompat="@android:drawable/ic_delete"/>
+                android:tint="@color/enterButtonBackground"
+                app:srcCompat="@drawable/ic_delete_24dp"/>
 
             <TextView
-                android:id="@+id/adresTextView"
+                android:id="@+id/adresEditText"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignParentStart="true"
                 android:layout_alignParentTop="true"
-                android:layout_margin="@dimen/item_margin"
+                android:layout_marginBottom="@dimen/item_margin"
+                android:layout_marginRight="@dimen/item_margin"
+                android:layout_marginTop="@dimen/item_margin"
                 android:layout_toStartOf="@+id/deleteButton"
                 android:layout_weight="1"
                 android:gravity="center_vertical"
                 android:textColor="@android:color/black"
                 android:textSize="@dimen/text_view_text_size"
-                tools:text="ADDRESS"/>
+                tools:text="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus lacinia pretium consectetur. Vestibulum a pretium dolor. Quisque tempus pellentesque eros."/>
         </RelativeLayout>
     </FrameLayout>
 
